--- a/index.html
+++ b/index.html
@@ -1,119 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ProTask - Professional To-Do App</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="style.css">
-</head>
-<body class="light">
-  <!-- Loader -->
-  <div class="loader" id="loader">
-    <div class="spinner"></div>
-  </div>
-
-  <div class="container">
-    <header>
-      <div class="logo">
-        <i class="fas fa-tasks"></i>
-        <span>ProTask</span>
-      </div>
-      <button class="theme-toggle" id="themeToggle">
-        <i class="fas fa-sun"></i>
-      </button>
-    </header>
-
-    <section class="dashboard">
-      <div class="card">
-        <h3>Total Tasks</h3>
-        <h2 id="totalCount">0</h2>
-        <p>All your tasks</p>
-      </div>
-      <div class="card">
-        <h3>Completed</h3>
-        <h2 id="completedCount">0</h2>
-        <p>Well done!</p>
-      </div>
-      <div class="card">
-        <h3>Pending</h3>
-        <h2 id="pendingCount">0</h2>
-        <p>Need attention</p>
-      </div>
-      <div class="card">
-        <h3>Progress</h3>
-        <h2 id="progressPercent">0%</h2>
-        <p id="progressMessage">Start your journey!</p>
-      </div>
-    </section>
-
-    <section class="add-todo">
-      <input type="text" id="todoInput" placeholder="What needs to be done?" />
-      <input type="date" id="dueDate" />
-      <input type="time" id="dueTime" />
-      <button id="addBtn">
-        <i class="fas fa-plus"></i> Add Task
-      </button>
-    </section>
-
-    <ul id="todoList">
-      <!-- Todos will be added here dynamically -->
-    </ul>
-
-    <div class="empty-state" id="emptyState">
-      <i class="fas fa-clipboard-list"></i>
-      <h3>No tasks yet</h3>
-      <p>Add your first task to get started</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ProTask - Professional To-Do App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="light">
+    <!-- Loader -->
+    <div class="loader" id="loader">
+      <div class="spinner"></div>
     </div>
-  </div>
 
-  <!-- Edit Modal -->
-  <div class="modal" id="editModal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3>Edit Task</h3>
-        <button class="close-btn" id="closeEditModal">
-          <i class="fas fa-times"></i>
+    <div class="container">
+      <header>
+        <div class="logo">
+          <i class="fas fa-tasks"></i>
+          <span>ProTask</span>
+        </div>
+
+        <button class="theme-toggle" id="themeToggle">
+          <i class="fas fa-sun"></i>
         </button>
+      </header>
+
+      <!-- dashboard start -->
+      <section class="dashboard">
+        <div class="card">
+          <h3>Total Tasks</h3>
+          <h2 id="totalCount">0</h2>
+          <p>All your tasks</p>
+        </div>
+        <div class="card">
+          <h3>Completed</h3>
+          <h2 id="completedCount">0</h2>
+          <p>Well done!</p>
+        </div>
+        <div class="card">
+          <h3>Pending</h3>
+          <h2 id="pendingCount">0</h2>
+          <p>Need attention</p>
+        </div>
+        <div class="card">
+          <h3>Progress</h3>
+          <h2 id="progressPercent">0%</h2>
+          <p id="progressMessage">Start your journey!</p>
+        </div>
+      </section>
+    <!-- dashboard start -->
+
+    <!-- add to do start -->
+      <section class="add-todo">
+        <input
+          type="text"
+          id="todoInput"
+          placeholder="What needs to be done?"
+        />
+        <input type="date" id="dueDate" />
+        <input type="time" id="dueTime" />
+        <button id="addBtn"><i class="fas fa-plus"></i> Add Task</button>
+      </section>
+    <!-- add to do end -->
+
+      <ul id="todoList">
+        <!-- Todos will be added here dynamically -->
+      </ul>
+
+      <!-- empty todo list start -->
+      <div class="empty-state" id="emptyState">
+        <i class="fas fa-clipboard-list"></i>
+        <h3>No tasks yet</h3>
+        <p>Add your first task to get started</p>
       </div>
-      <div class="modal-body">
-        <input type="text" id="editText" placeholder="Task description" />
-        <input type="date" id="editDate" />
-        <input type="time" id="editTime" />
-      </div>
-      <div class="modal-footer">
-        <button class="cancel-btn" id="cancelEdit">Cancel</button>
-        <button class="confirm-btn" id="saveEdit">Save Changes</button>
+       <!-- empty todo list end -->
+
+    </div>
+
+    <!-- Edit Modal start -->
+    <div class="modal" id="editModal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Edit Task</h3>
+          <button class="close-btn" id="closeEditModal">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" id="editText" placeholder="Task description" />
+          <input type="date" id="editDate" />
+          <input type="time" id="editTime" />
+        </div>
+        <div class="modal-footer">
+          <button class="cancel-btn" id="cancelEdit">Cancel</button>
+          <button class="confirm-btn" id="saveEdit">Save Changes</button>
+        </div>
       </div>
     </div>
-  </div>
+    <!-- Edit Modal end -->
 
-  <!-- Delete Modal -->
-  <div class="modal" id="deleteModal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3>Confirm Deletion</h3>
-        <button class="close-btn" id="closeDeleteModal">
-          <i class="fas fa-times"></i>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to delete this task? This action cannot be undone.</p>
-      </div>
-      <div class="modal-footer">
-        <button class="cancel-btn" id="cancelDelete">Cancel</button>
-        <button class="confirm-btn" id="confirmDelete">Delete</button>
+    <!-- Delete Modal start-->
+    <div class="modal" id="deleteModal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Confirm Deletion</h3>
+          <button class="close-btn" id="closeDeleteModal">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>
+            Are you sure you want to delete this task? This action cannot be
+            undone.
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button class="cancel-btn" id="cancelDelete">Cancel</button>
+          <button class="confirm-btn" id="confirmDelete">Delete</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Audio Elements -->
-  <audio id="addSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
-  <audio id="completeSound" src="https://assets.mixkit.co/sfx/preview/mixkit-positive-interface-beep-221.mp3"></audio>
-  <audio id="deleteSound" src="https://assets.mixkit.co/sfx/preview/mixkit-quick-jump-arcade-game-239.mp3"></audio>
+    <!-- Delete Modal end-->
 
+    <!-- Audio Elements start-->
+    <audio
+      id="addSound"
+      src="./audio/add-sound.wav"
+    ></audio>
+    <audio
+      id="completeSound"
+      src="./audio/complete-sound.wav"
+    ></audio>
+    <audio
+      id="deleteSound"
+      src="./audio/delete-sound.mp3"
+    ></audio>
+ <!-- Audio Elements start-->
 
-
-  <script src="./app.js"></script>
-</body>
+    <script src="./app.js"></script>
+  </body>
 </html>
